fixed cut off text in privacy section of homepage

--- a/source/css/euclid-main.css
+++ b/source/css/euclid-main.css
@@ -488,7 +488,7 @@ a.resumator-hide-details:hover { margin-bottom: 0px !important; }
 .merge-down-follower { padding-top: 25px; }
 .bump-up, .merge-down-follower { margin-top: -35px; }
 .mini-bump-up { margin-top: -15px; }
-.mini-bump-left { margin-left: -100px; }
+.mini-bump-left { margin-left: -80px; }
 .bump-left { margin-left: -200px; padding-right: 130px; }
 .no-pad { padding: 0; }
 .pad-top { padding-top: 25px; }
